# voidtower

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  ROADMAP.md  SECURITY.md  UI_plan.md  docker-compose.yml  future_plan.md  plan.md  start-dev.sh
backend/: Cargo.toml  deny.toml
backend/dev-data/: voidtower.db  voidtower.db-shm  voidtower.db-wal
backend/dev-data/apps/vt-llama-cpp/: docker-compose.yml
backend/dev-data/apps/vt-odysseus/: docker-compose.yml
backend/dev-data/apps/vt-ollama/: docker-compose.yml
backend/src/: error.rs  main.rs  oidc.rs  policy.rs  voidwatch.rs
backend/src/ai/: mod.rs  orchestrator.rs  router.rs
backend/src/ai/providers/: anthropic.rs  (+4 more)
backend/src/alerts/: mod.rs
backend/src/api/: agents.rs  ai.rs  ai_ask.rs  ai_context.rs  ai_providers.rs  alerts.rs  apps.rs  audit.rs  auth.rs  authz_matrix.rs  authz_matrix_tests.rs  automation.rs  backups.rs  bearer_auth.rs  capabilities.rs  containers.rs  demo_guard.rs  diagnostics.rs  disaster.rs  events.rs  files.rs  firewall.rs  integrations.rs  lxc.rs  mcp.rs  members.rs  metrics.rs  mod.rs  models.rs  mods.rs  nav_config.rs  network.rs  node_enroll.rs  plugins.rs  policy.rs  proxmox.rs  proxy.rs  redact.rs  scope_bypass_tests.rs  secrets.rs  (+18 more)
backend/src/audit/: mod.rs
backend/src/auth/: mod.rs  scope_enforce.rs
backend/src/automation/: mod.rs
backend/src/backups/: mod.rs
backend/src/cluster/: mod.rs
backend/src/config/: mod.rs
backend/src/containers/: mod.rs
backend/src/db/: mod.rs
backend/src/monitoring/: mod.rs
backend/src/networking/: mod.rs
backend/src/security/: mod.rs
backend/src/services/: mod.rs
backend/src/storage/: mod.rs
backend/src/terminal/: mod.rs
backend/src/vms/: mod.rs
backend/src/voidwatch/: allowlist_seed.rs  denylist.rs  mod.rs  mode.rs  risk_class.rs
backend/tests/: schema_golden.sql  schema_v0_9_0_seed.sql
(+356 files in other folders)
