[package]
name = "voidtower"
version = "0.1.0"
edition = "2021"
description = "Self-hosted Linux infrastructure command tower"
license = "AGPL-3.0-or-later"
default-run = "voidtower"

[[bin]]
name = "voidtower"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip", "trace", "request-id", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "time", "uuid", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
sysinfo = "0.30"
futures = "0.3"
futures-util = "0.3"
anyhow = "1"
thiserror = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tokio-stream = { version = "0.1", features = ["sync"] }
portable-pty = "0.8"
bollard = { version = "0.16", default-features = false, features = ["time"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
totp-lite = "2"
data-encoding = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs", "user", "process", "signal"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
